--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="search_hint_home">Search</string>
     <string name="home_intro">Explore Itineraries in Berkeley!</string>
 
+    <string name="filter"></string>
+
     <!-- strings for profile page. -->
     <string name="profile_name">Jordan Doe</string>
     <string name="profile_location">Berkeley, CA</string>
