--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,21 @@
     <!-- strings for home page -->
     <string name="search_hint_home">Search</string>
     <string name="home_intro">Explore Itineraries in Berkeley!</string>
-
     <string name="filter"></string>
+
+    <!-- strings for splash page -->
+    <array name="categories">
+        <item>food</item>
+        <item>hike</item>
+        <item>music</item>
+        <item>art</item>
+    </array>
+    <array name="category_pics">
+        <item>@drawable/food</item>
+        <item>@drawable/music</item>
+        <item>@drawable/hike</item>
+        <item>@drawable/art</item>
+    </array>
 
     <!-- strings for profile page. -->
     <string name="profile_name">Jordan Doe</string>
@@ -24,19 +37,8 @@
 
     <string name="hello_blank_fragment">Hi Im blank</string>
 
-    <array name="categories">
-        <item>food</item>
-        <item>hike</item>
-        <item>music</item>
-        <item>art</item>
-    </array>
-
-    <array name="category_pics">
-        <item>@drawable/food</item>
-        <item>@drawable/music</item>
-        <item>@drawable/hike</item>
-        <item>@drawable/art</item>
-
-    </array>
+    <!-- strings for posted and saved -->
+    <string name="posted_intro">Itineraries You Have Created</string>
+    <string name="saved_intro">Itineraries You Have Bookmarked</string>
 
 </resources>
