--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_create">Create</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_saved">Saved</string>
     <string name="menu_posted">Posted</string>
 
@@ -40,5 +40,12 @@
     <!-- strings for posted and saved -->
     <string name="posted_intro">Itineraries You Have Created</string>
     <string name="saved_intro">Itineraries You Have Bookmarked</string>
+
+    <!-- strings for settings page -->
+    <string name="settings_intro">This is Settings Page</string>
+    <string name="contrast_text">Increased Contrast</string>
+    <string name="font_text">Typeface for Increased Legibility</string>
+    <string name="color_text">Color Pallet</string>
+
 
 </resources>
