pass searchQueryObject from homefrag to filter fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
 
     <!-- strings for home page -->
-    <string name="home_search_hint_tag">Ex. family-friendly</string>
+    <string name="home_search_hint_tag">Ex. family friendly</string>
     <string name="home_search_hint_loc">Current Location</string>
 
     <string name="filter_button">Filter</string>
